// CeiVoice API Database Schema
// Generated from Prisma Schema
// Provider: PostgreSQL

// ===== LOOKUP TABLES (Reference Data) =====

Table ticket_statuses {
  status_id int [pk, increment]
  name varchar(20) [unique, not null, note: 'Draft, New, Assigned, Solving, Solved, Failed, Renew']
  step_order int [unique, not null, note: 'Defines workflow progression order']
  description text
  is_active boolean [default: true, note: 'Soft delete flag for future status retirement']
  
  indexes {
    step_order
  }
}

Table categories {
  category_id int [pk, increment]
  name varchar(50) [unique, not null]
  sla_hours int [default: 24, note: 'Service Level Agreement specific to category']
  description text
  is_active boolean [default: true]
  
  indexes {
    name
  }
}

// ===== CORE ENTITIES =====

Table users {
  user_id int [pk, increment]
  email varchar(255) [unique, not null]
  name varchar(100)
  password text [note: 'For email/password authentication (hashed)']
  role varchar(20) [not null, note: 'USER, ASSIGNEE, ADMIN']
  google_id varchar [unique]
  is_active boolean [default: true, note: 'Soft delete flag - never delete users']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    email
    role
    is_active
  }
}

Table oauth_tokens {
  token_id int [pk, increment]
  user_id int [unique, not null, ref: > users.user_id]
  google_token text [not null]
  refresh_token text
  expires_at timestamp
}

Table requests {
  request_id int [pk, increment]
  email varchar(255) [not null]
  message text [not null]
  tracking_id varchar [unique, not null, note: 'cuid()']
  created_at timestamp [default: `now()`]
  
  indexes {
    email
    tracking_id
    created_at
  }
}

// ===== MAIN TICKET TABLE (CURRENT STATE) =====

Table tickets {
  ticket_id int [pk, increment]
  title varchar(150) [not null]
  summary text [not null]
  suggested_solution text
  
  // Current State (Single Source of Truth)
  status_id int [ref: > ticket_statuses.status_id]
  category_id int [ref: > categories.category_id]
  creator_user_id int [ref: > users.user_id]
  assignee_user_id int [ref: > users.user_id]
  
  // Workflow Timestamps
  created_at timestamp [default: `now()`, note: 'AI draft creation time']
  activated_at timestamp [note: 'When Admin submitted Draft → New']
  activated_by_id int [ref: > users.user_id]
  deadline timestamp [note: 'Set by Admin during draft review']
  resolved_at timestamp [note: 'When marked Solved/Failed']
  updated_at timestamp [default: `now()`]
  
  // Resolution (Required for Solved/Failed)
  resolution_comment_id int [ref: > comments.comment_id]
  
  // Metadata
  priority varchar(10) [default: 'Medium', note: 'Low, Medium, High, Critical']
  
  indexes {
    status_id
    category_id
    assignee_user_id
    creator_user_id
    activated_at
    deadline
    created_at
    priority
  }
}

// ===== AUDIT TRAIL TABLES =====

Table status_histories {
  history_id int [pk, increment]
  ticket_id int [not null, ref: > tickets.ticket_id]
  old_status_id int [ref: > ticket_statuses.status_id]
  new_status_id int [ref: > ticket_statuses.status_id]
  changed_by_id int [ref: > users.user_id]
  change_reason text [note: 'Optional comment explaining the change']
  changed_at timestamp [default: `now()`]
  
  indexes {
    ticket_id
    new_status_id
    changed_at
    changed_by_id
  }
}

Table assignment_histories {
  assignment_id int [pk, increment]
  ticket_id int [not null, ref: > tickets.ticket_id]
  old_assignee_id int [ref: > users.user_id]
  new_assignee_id int [ref: > users.user_id]
  changed_by_id int [not null, ref: > users.user_id]
  change_reason text
  changed_at timestamp [default: `now()`]
  
  indexes {
    ticket_id
    new_assignee_id
    changed_at
  }
}

// ===== COLLABORATION =====

Table comments {
  comment_id int [pk, increment]
  ticket_id int [not null, ref: > tickets.ticket_id]
  user_id int [not null, ref: > users.user_id]
  content text [not null]
  visibility varchar(10) [default: 'PUBLIC', note: 'PUBLIC, INTERNAL']
  created_at timestamp [default: `now()`]
  
  indexes {
    ticket_id
    user_id
    created_at
    visibility
  }
}

Table followers {
  follower_id int [pk, increment]
  ticket_id int [not null, ref: > tickets.ticket_id]
  user_id int [not null, ref: > users.user_id]
  followed_at timestamp [default: `now()`]
  
  indexes {
    (ticket_id, user_id) [unique]
    ticket_id
    user_id
  }
}

// ===== LINKING TABLES =====

Table ticket_requests {
  ticket_id int [pk, ref: > tickets.ticket_id]
  request_id int [pk, ref: > requests.request_id]
  
  indexes {
    ticket_id
    request_id
  }
}

Table assignee_scopes {
  scope_id int [pk, increment]
  assignee_id int [not null, ref: > users.user_id]
  scope_name varchar(50) [not null, note: 'IT, HR, Finance, etc.']
  
  indexes {
    (assignee_id, scope_name) [unique]
    assignee_id
    scope_name
  }
}

// ===== NOTIFICATIONS =====

Table notifications {
  notification_id int [pk, increment]
  ticket_id int [not null, ref: > tickets.ticket_id]
  user_id int [not null, ref: > users.user_id]
  type varchar(30) [not null, note: 'submission, status_change, new_comment, assignment']
  message text [not null]
  is_read boolean [default: false]
  created_at timestamp [default: `now()`]
  
  indexes {
    ticket_id
    user_id
    is_read
    created_at
  }
}
